--- a/README
+++ b/README
@@ -1,9 +1,12 @@
-This is a language detector I built in C++ and wrapped as a python module.
+Python Language Detector
+========================
 
-It uses basic trigram style identification, and is built to be fast and reliable.
-Some accuracy tradeoffs were made for speed over other similar algorithms, but accuracy remains very high for even short sample texts.
+Trigram-based language detection built in C++ and wrapped as a python module.
+
+Built for speed and reliability as primary concerns, with some small accuracy sacrifices vs. similar algorithms. For the purpose it was built for, the accuracy still remains very high for even short sample texts.
+
+Identification is performed through basic trigram lookups paired with unicode character set recognition. Performance is aided by custom hash tables using Murmur hash for fast lookups.
+
 This is currently used in a large commercial database application in production, and has proven to be stable, reliable, and fast.
 
-Makes heavy use of custom hash tables using Murmur hash for fast lookups.
-
-No official license is included yet, but at this stage consider it open source with attribution appreciated.
+**MIT Licensed (MIT)** - Copyright (c) 2012 Jeffrey Graves
